change last image example

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                         src="./godfather-images/godfather3-500.jpg"
                         srcset="
                             ./godfather-images/godfather3-500.jpg 500w,
-                            ./godfather-images/godfather3-1000 1000w,
+                            ./godfather-images/godfather3-1000.jpg 1000w,
                             ./godfather-images/godfather3-1500.jpg 1500w"
                         sizes="
-                            (max-width: 500px) 50vw, 100vw"
+                            (min-width: 760px) 50vw, 100vw"
                         alt="The Godfather"
                     >
                     <h2>Godfather 3</h2>
